fixing errors, implementing homeview and profile view
