# service/api/api-handler.go
@@ -17,7 +17,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:username/photos/", rt.wrap(rt.uploadPhoto))
 	rt.router.GET("/users/:username/photos/", rt.wrap(rt.getUserPhoto))
 	rt.router.DELETE("/users/:username/photos/:pid", rt.wrap(rt.deletePhoto))
-	rt.router.GET("/users/:username/photos/:pid", rt.wrap(rt.getPhoto))
+	// rt.router.GET("/users/:username/photos/:pid", rt.wrap(rt.getPhoto))
 
 	rt.router.PUT("/users/:username/photos/:pid/likes/:likeUsername", rt.wrap(rt.likePhoto))
 	rt.router.DELETE("/users/:username/photos/:pid/likes/:likeUsername", rt.wrap(rt.unlikePhoto))
